# PipelineAndTD

./: .envrc  .gitignore  README.md  pyproject.toml
DataLecture/BoostSerialization/: CMakeLists.txt
DataLecture/BoostSerialization/include/: Sphere.h
DataLecture/BoostSerialization/src/: Sphere.cpp  main.cpp
DataLecture/HDF5/: CustomData.py  SingleData.py
DataLecture/JSon/: data.json  read_scene.py  scene.json  scene_schema.json  write_scene.py
DataLecture/Pickle/: Sphere.py  sphere
DataLecture/Protobuf/: CMakeLists.txt  read.cpp  read.py  scene.proto  write.cpp
DataLecture/QSettings/: Settings.py
DataLecture/USD/: MayaCustomExport.py  README.md  blue-cube.usda  cube-model.usda  cube.usda  scene.usda  variants.usda
DataLecture/USD/python/: BlueCube.usda  GfMath.py  animate.py  blue-cube.usda  createBlueCube.py  createCube.py  createScene.py  cube.usda  curves.py  grass.py  layer-cube.usda  layer.usda  layers.py  points.py  pointsInstanced.py  pointsInstanced.usda  primitives.py  primitives.usda  simple.py  simple.usda
DataLecture/USD/variants/: Mug.usda  createGround.py  createMugVariants.py  createVariants.py  layoutMugs.py
DiskSampling/DiskSampling/: README.md
DiskSampling/DiskSampling/01OriginalPython/: Poisson.py  README.md  pyproject.toml  scatter.py
DiskSampling/DiskSampling/02CPPVersion/: CMakeLists.txt
DiskSampling/DiskSampling/02CPPVersion/src/: main.cpp  scatter.py
DiskSampling/DiskSampling/03PyBind11/: CMakeLists.txt  pyproject.toml
DiskSampling/DiskSampling/04Swig/: CMakeLists.txt  build.sh
DiskSampling/DiskSampling/05Pythonic/: CMakeLists.txt  pyproject.toml
DiskSampling/DiskSampling/common/: PoissonDisk.h
DiskSampling/Embed1/: a.out  embed.cpp
DiskSampling/File/: CMakeLists.txt  file.cpp
DockerGPUDevContainer/: Dockerfile  OpenGLTriangle.py  Taskfile.yml  compose.yaml  pyproject.toml  run-x11-container.sh
DockerGPUDevContainer/.devcontainer/: devcontainer.json
HoudiniCodeExplorer/: CodeExplorer.py  CodeExplorerSession.md  HouTextEditor.py  NodeTree.py  PythonHighlighter.py  installHouPackage.py  shelf.py
HoudiniCodeExplorer/docs/agent-sessions/: 2026-03-07-session.md
HoudiniPackage/: README.md  installHouPackage.py  pyproject.toml
HoudiniPackage/scripts/: CustomDialog.py
Lab2/LightsOnSphere/: CreateLights.py  CreateScenes.py
Lab2/Renderman/: teapot.rib
Lab2/SedAndAwk/: count.awk  decimate.awk  genBadFile.py  scale.awk
Lab2/Soulution/: cleanScene.awk  pythonProcessing.py
Lab3/: attrib1.py  attrib2.py  attrib3.py
Lecture10DocAndDeploy/Doxygen/: Vec3.cpp  Vec3.h
Lecture3Databases/TheComputerStore/: README.md  createDatabase.sql  store.py
Lecture3Databases/sqlitetest1/: checkScores.py
Lecture3Python/DiskSampling/03PyBind11/: CMakeLists.txt  README.md  pyproject.toml  test.py
Lecture3Python/DiskSampling/03PyBind11/include/: PoissonDisk.h
Lecture3Python/DiskSampling/03PyBind11/src/: PoissonDisk.cpp  PythonBindings.cpp
Lecture3Python/DiskSampling/04Swig/: CMakeLists.txt  README.md  pyproject.toml
Lecture3Python/DiskSampling/04Swig/src/: PoissonDisk.i
Lecture3Python/Embed1/: CMakeLists.txt  embed.cpp
Lecture3Python/Extend1/: CMakeLists.txt  extend.cpp
Lecture4Databases/TheComputerStore/: CMakeLists.txt  README.md  createDatabase.sql  store1.cpp
Lecture4Databases/cppTest1/: CMakeLists.txt  createDatabase.sql  modern.cpp  test.cpp
Lecture4Databases/sqlitetest1/: CMakeLists.txt  README.md  checkScores.cpp  checkScores.py  createDatabase.sql
Lecture5Docker/PythonExample/: Dockerfile  hello.py
Lecture6Systems/ByteImage/: ByteImage.py  test.sh
Lecture6Systems/DisplayPixmap/: DisplayPixmap.py
Lecture6Systems/Env/: env.cpp  env.py  env2.cpp
Lecture6Systems/FileSystem/: BaseMayaProject.tgz  copy_project.py  file.py  path_lib.py
Lecture6Systems/ImageFIFO/: DisplayPixmap.py  createImage.py  createImageUI.py  form.ui
Lecture6Systems/ImageSharedMemory/: DisplayPixmap.py  createImageUI.py  form.ui
Lecture6Systems/Processes/: a.out  process.cpp  procloop.cpp  signal.cpp  signal_test.py
Lecture6Systems/SimpleFiFo/: client.py  server.py
Lecture6Systems/SimpleSocket/: client.py  server.py
Lecture6Systems/Subprocess/: make_movie.py  run.py  run_process.py
Lecture7GUI/: Button.qml  ColourMixer.qml  Menu.qml  Numbers.qml  Text.qml
Lecture8Threading/Logger/: Logger.h
Lecture8Threading/QtThread/: .qmake.stash  CMakeLists.txt  MyThread.cpp  MyThread.h  main.cpp
Lecture8Threading/c++11Threads/: CMakeLists.txt  thread1.cpp  thread2.cpp  thread3.cpp  thread4.cpp  thread5.cpp  thread6.cpp  thread7.cpp
Lecture8Threading/fork/: daemon.cpp  daemon.py  fork.cpp
Lecture8Threading/pthread/: CMakeLists.txt  conwait.cpp  conwait2.cpp  mutex1.cpp  pthread1.cpp  pthread2.cpp  pthread3.cpp  pthread4.cpp  racehazard.cpp
Lecture9Threading/lambda/: atomic1.cpp  lambda1.cpp  prod.cpp  race1.cpp  result.cpp
Lecture9Threading/pool/: CMakeLists.txt  Pool.cpp
Lecture9Threading/python/: 1.txt  futures.py  lock.py  lock2.py  multiple_threads.py  producer_consumer.py  racehazard.py  stop_threads.py  thread1.py  thread2.py  tqueue.py
MOTW/numpy/: array.py  matrix.py
MOTW/rich/: codeview.py  print.py  progress.py
MayaPlugins/: DAGIt.py  GetSelection.py  MComputation.py  MComputationRange.py  NoiseNodeDemo.py  SineNodeDemo.py  frame.py  installModule.py
MayaPlugins/plug-ins/: CubeLocatorNode.py  CustomSphere.py  CustomSphereSolution.py  HelloMaya.py  InputNode.py  Noise.py  NoiseNode.py  RibExporter.py  SineNode.py  TriLocatorNode.py  pyproject.toml
MayaPlugins/tests/: test_CustomSphere.py  test_CustomSphereSolution.py  test_SineNode.py
MySQL/: CreateDB.sql  Taskfile.yml  Taskfile_darwin.yml  Taskfile_linux.yml
PyQtStarter/: README.md  form.ui  mainwindow.py  pyproject.toml
PySideGuiTesting/: main.py  pyproject.toml  test_main.py
PySideStarter/: README.md  pyproject.toml  simpleDialog.py
QtPyStarter/: QtPyStarter.py  README.md  pyproject.toml
ScreenshotTool/: ScreenShotTool.py  ScreenShotToolHou.py  dialog.py  dialog.ui
SendToMaya/: sendtomaya.py
SimpleMayaDialog/: SimpleDialog.py
(+27 files in other folders)
