[project]
name = "PipeLineAndTDDemos"
version = "0.1.0"
description = "All of the code used in Pipeline and TD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.13",
    "mkdocstrings[python]>=0.29.1",
    "pyside6>=6.9.0",
    "qtpy>=2.4.3",
]

[tool.uv.workspace]
members = ["HoudiniPackage", "Lab3","DataLecture/*"]
exclude = ["Lab2","DataLecture/Protobuf","DataLecture/BoostSerialization","DataLecture/USD","DataLecture/Export"]
