[project]
name = "PipeLineAndTDDemos"
version = "0.1.0"
description = "All of the code used in Pipeline and TD"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "jsonschema>=4.26.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.13",
    "mkdocstrings[python]>=0.29.1",
    "pyside6>=6.9.0",
    "qtpy>=2.4.3",
    "usd-core>=25.11",
]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-qt>=4.5.0",
]

[tool.uv.workspace]
members=["ArgsExplorer"]
exclude =["*"]
